[package]
name = "realtek"
version = "0.1.0"
edition.workspace = true
authors = ["Debin Luo <luodeb@outlook.com>"]

[features]
default = []
qemu = ["dep:axplat-aarch64-qemu-virt"]
opi5p = ["dep:axplat-aarch64-opi5p"]

[dependencies]
cfg-if = "1.0"
axstd = { workspace = true, features = [
    "myplat",
    "alloc",
    "multitask",
    "net",
    "irq",
    "bus-pci",
    "driver-realtek"
] }
axplat-aarch64-qemu-virt = { version = "0.2", features = [], optional = true }

[dependencies.axplat-aarch64-opi5p]
git = "https://github.com/starry-mix-rk3588/axplat-opi5p.git"
# path = "../../crates/axplat-opi5p/axplat-aarch64-opi5p"
features = ["fp-simd", "irq"]
optional = true